--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <div class="header">
     <!-- Replace 'path-to-your-logo.png' with the path to your logo image -->
-    <img src="path-to-your-logo.png" alt="OpenCola logo" />
+    <img src="opencola-logo.png" alt="OpenCola logo" width="100" height="100" />
     <h1>Coming March 2024</h1>
   </div>
   
