--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
     <a href="#">Modpack</a> | 
     <a href="#">Server</a>
   </div>
+
+    <!-- New section for additional links -->
+  <div class="bottom-links">
+    <a href="#">About OpenCola</a> | 
+    <a href="#">FAQ</a> | 
+    <a href="#">Help</a> | 
+    <a href="#">Terms of Service</a> | 
+    <a href="#">Contact Us</a>
+  </div>
+
   
   <div class="footer">
     © 2024 OpenCola
