--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     margin-top: 100px;
     font-size: 0.75em;
   }
-  .nav {
+  .nav, .bottom-links, .middle-content {
     margin-top: 50px;
   }
-  .nav a {
+  .nav a, .bottom-links a {
     margin: 0 15px;
     text-decoration: none;
     color: black;
@@ -28,11 +28,14 @@
     margin-top: 50px;
     font-size: 0.75em;
   }
+  /* Style for new middle content */
+  .middle-content {
+    font-size: 1em; /* Example font size, adjust as needed */
+  }
 </style>
 </head>
 <body>
   <div class="header">
-    <!-- Replace 'path-to-your-logo.png' with the path to your logo image -->
     <img src="opencola-logo.png" alt="OpenCola logo" width="100" height="100" />
     <h1>Coming March 2024</h1>
   </div>
@@ -42,8 +45,13 @@
     <a href="#">Modpack</a> | 
     <a href="#">Server</a>
   </div>
+  
+  <!-- New middle content section -->
+  <div class="middle-content">
+    <p>This is the new content you've added between the navigation and the bottom links. Customize it as you need.</p>
+  </div>
 
-    <!-- New section for additional links -->
+  <!-- New section for additional links -->
   <div class="bottom-links">
     <a href="#">About OpenCola</a> | 
     <a href="#">FAQ</a> | 
@@ -51,7 +59,6 @@
     <a href="#">Terms of Service</a> | 
     <a href="#">Contact Us</a>
   </div>
-
   
   <div class="footer">
     © 2024 OpenCola
