--- a/index.html
+++ b/index.html
@@ -48,8 +48,42 @@
   
   <!-- New middle content section -->
   <div class="middle-content">
-    <p>This is the new content you've added between the navigation and the bottom links. Customize it as you need.</p>
+    <p>Explore, Build, and Thrive in Our Custom Minecraft World</p>
   </div>
+
+    <section id="features">
+        <h2>Our Features</h2>
+        <ul>
+            <li>Expansive Mod Pack: Discover over 100+ mods that add new dimensions, biomes, mobs, and blocks to your world.</li>
+            <li>Community-Driven: Join a vibrant community that shapes the mod pack's future. Share your ideas, creations, and feedback.</li>
+            <li>Seamless Integration: Easy installation and compatibility with Minecraft servers. Start playing with friends in minutes.</li>
+            <li>Regular Updates: Stay engaged with frequent updates that introduce new content, improvements, and fixes.</li>
+        </ul>
+    </section>
+
+    <section id="get-started">
+        <h2>Get Started</h2>
+        <ol>
+            <li>Download the Mod Pack: Head over to our <a href="/download">Download</a> page to get the latest version of OpenColaMod.</li>
+            <li>Installation Guide: Need help installing? Our <a href="/tutorials">Tutorials</a> section has you covered with step-by-step instructions.</li>
+            <li>Join the Community: Connect with fellow players on our <a href="/forums">Forums</a> or <a href="/discord">Discord</a> channel. Share your adventures, ask questions, and find new friends.</li>
+        </ol>
+    </section>
+
+    <section id="latest-news">
+        <h2>Latest News</h2>
+        <p>Catch up on the latest developments, upcoming events, and community highlights in our <a href="/news">News</a> section. Don't miss out on any updates from the world of OpenColaMod!</p>
+    </section>
+
+    <section id="server-status">
+        <h2>Server Status</h2>
+        <p>Looking to join our official server? Check the current <a href="/server-status">Server Status</a> to see if we're online and ready for you to dive in.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Have questions, suggestions, or need support? Our <a href="/contact">Contact</a> page provides all the information you need to get in touch with the OpenColaMod team.</p>
+    </section>
 
   <!-- New section for additional links -->
   <div class="bottom-links">
