--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>OpenCola</title>
+<link rel="stylesheet" href="style.css">
 <style>
   body {
     text-align: center;
@@ -48,7 +49,7 @@
   
   <!-- New middle content section -->
   <div class="middle-content">
-    <p>Explore, Build, and Thrive in Our Custom Minecraft World</p>
+    <p>Explore, Build, and Thrive in Our Custom Minecraft World!</p>
   </div>
 
     <section id="features">
