--- a/index.html
+++ b/index.html
@@ -102,5 +102,6 @@
   <div class="disclaimer">
     OpenCola is not affiliated with, maintained, authorized, endorsed, or sponsored by Mojang, Microsoft, or any of their affiliates.
   </div>
+<script src="main.js"></script>
 </body>
 </html>
