--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
     <a href="#">Modpack</a> | 
     <a href="#">Server</a>
   </div>
-  
+  <div class="card">
+    <h2>Server Status</h2>
+  </div>
+  <div id="rest">Loading ...</div>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <!-- New middle content section -->
   <div class="middle-content">
     <p>Explore, Build, and Thrive in Our Custom Minecraft World!</p>
