--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <!-- New middle content section -->
   <div class="middle-content">
-    <p>Explore, Build, and Thrive in Our Custom Minecraft World!</p>
+    <p>Explore, Build, and Thrive in Our Custom Minecraft World</p>
   </div>
 
     <section id="features">
