--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="nav">
     <a href="#">Home</a> | 
     <a href="#">Modpack</a> | 
-    <a href="#">Server</a>
+    <a href="server.html">Server</a>
   </div>
   <div class="card">
     <h2>Server Status</h2>
