--- a/server.html
+++ b/server.html
@@ -1,6 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<body>
 <div class="card">
     <h2>Server Status</h2>
   </div>
   <div id="rest">Loading ...</div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+</body>
+</html>
