--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
   
   <div class="nav">
-    <a href="#">Home</a> | 
+    <a href="index.html"><strong>Home</strong></a> | 
     <a href="#">Modpack</a> | 
     <a href="server.html">Server</a>
   </div>
