--- a/server.html
+++ b/server.html
@@ -42,7 +42,7 @@
   </div>
   
   <div class="nav">
-    <a href="#">Home</a> | 
+    <a href="index.html">Home</a> | 
     <a href="#">Modpack</a> | 
     <a href="server.html"><strong>Server</strong></a>
   </div>
