--- a/index.html
+++ b/index.html
@@ -46,12 +46,6 @@
     <a href="#">Modpack</a> | 
     <a href="server.html">Server</a>
   </div>
-  <div class="card">
-    <h2>Server Status</h2>
-  </div>
-  <div id="rest">Loading ...</div>
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <!-- New middle content section -->
   <div class="middle-content">
     <p>Explore, Build, and Thrive in Our Custom Minecraft World</p>
@@ -70,9 +64,7 @@
     <section id="get-started">
         <h2>Get Started</h2>
         <ol>
-            <li>Download the Mod Pack: Head over to our <a href="/download">Download</a> page to get the latest version of OpenColaMod.</li>
-            <li>Installation Guide: Need help installing? Our <a href="/tutorials">Tutorials</a> section has you covered with step-by-step instructions.</li>
-            <li>Join the Community: Connect with fellow players on our <a href="/forums">Forums</a> or <a href="/discord">Discord</a> channel. Share your adventures, ask questions, and find new friends.</li>
+            <li>Installation Guide: Need help installing? Our <a href="help.html">Help</a> section has you covered with step-by-step instructions.</li>
         </ol>
     </section>
 
