--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <a href="#">FAQ</a> | 
     <a href="#">Help</a> | 
     <a href="#">Terms of Service</a> | 
-    <a href="#">Contact Us</a>
+    <a href="contact.html">Contact Us</a>
   </div>
   
   <div class="footer">
