--- a/server.html
+++ b/server.html
@@ -47,7 +47,12 @@
     <a href="server.html"><strong>Server</strong></a>
   </div>
   
-
+ <div class="middle-content">
+    <div class="card">
+    <h2>ip: opencolamod.com</h2>
+  </div>
+</div>
+  
   <div class="middle-content">
     <div class="card">
     <h2>Server Status</h2>
