--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
   
   <div class="nav">
     <a href="index.html">Home</a> | 
-    <a href="#">Modpack</a> | 
+    <a href="modpack.html">Modpack</a> | 
     <a href="server.html"><strong>Server</strong></a>
   </div>
   
