--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
   <div class="nav">
     <a href="index.html"><strong>Home</strong></a> | 
-    <a href="#">Modpack</a> | 
+    <a href="modpack.html">Modpack</a> | 
     <a href="server.html">Server</a>
   </div>
   <!-- New middle content section -->
