--- a/modpack.html
+++ b/modpack.html
@@ -46,11 +46,17 @@
     <a href="modpack.html"><Strong>Modpack</Strong></a> | 
     <a href="server.html">Server</a>
   </div>
-  <!------------------------------------------------------------------------------------------------------------------------------------------>
+
  <div class="middle-content">
-  
+<!------------------------------------------------------------------------------------------------------------------------------------------>
+
+   <h2>OpenCola Mod list</h2>
+   -Create
+   -
+   
+<!------------------------------------------------------------------------------------------------------------------------------------------>
   </div>
-  <!------------------------------------------------------------------------------------------------------------------------------------------>
+
 
   <!-- New section for additional links -->
   <div class="bottom-links">
