--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 </style>
 </head>
 <body>
-  <div class="header">
-    <img src="opencola-logo.png" alt="OpenCola logo" width="100" height="100" />
-    <h1>Coming March 2024</h1>
+<div class="header">
+  <button id="dark-mode-toggle">Toggle Dark Mode</button>
+  <img src="opencola-logo.png" alt="OpenCola logo" width="100" height="100" />
+  <h1>Coming March 2024</h1>
   </div>
   
   <div class="nav">
