--- a/header.html
+++ b/header.html
@@ -44,7 +44,7 @@
   <div class="nav">
     <a href="index.html">Home</a> | 
     <a href="modpack.html">Modpack</a> | 
-    <a href="server.html"><strong>Server</strong></a>
+    <a href="server.html">Server</a>
   </div>
 </body>
 </html>
