--- a/test.html
+++ b/test.html
@@ -1,3 +1,3 @@
-<!--#include virtual="/path/to/header.html" -->
+<!--#include virtual="header.html" -->
 Error 404 or something. Page not found.
-<!--#include virtual="/path/to/footer.html" -->
+<!--#include virtual="footer.html" -->
