--- a/test.html
+++ b/test.html
@@ -1,3 +1,6 @@
 <!--#include virtual="header.html" -->
 Error 404 or something. Page not found.
+<div>
+  <h2>¯\_(ツ)_/¯</h2>
+</div>
 <!--#include virtual="footer.html" -->
