--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
   <!-- New section for additional links -->
   <div class="bottom-links">
-    <a href="#">About OpenCola</a> | 
-    <a href="#">FAQ</a> | 
-    <a href="#">Help</a> | 
-    <a href="#">Terms of Service</a> | 
+    <a href="about.html">About OpenCola</a> | 
+    <a href="faq.html">FAQ</a> | 
+    <a href="help.html">Help</a> | 
+    <a href="tos.html">Terms of Service</a> | 
     <a href="contact.html">Contact Us</a>
   </div>
   
