--- a/tos.html
+++ b/tos.html
@@ -48,7 +48,7 @@
   </div>
   
 
-<div class="container" style="text-align: left;">
+<div class="container" style="text-align: left; width: 50%; margin: 0 auto;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
