--- a/tos.html
+++ b/tos.html
@@ -55,16 +55,17 @@
     <title>Terms of Service</title>
 </head>
 <body>
-    <h1>Welcome to opencolamod.com ("Website")</h1>
+    <br>
+    <h1>Welcome to opencolamod.com ("Website")</h1><br><br>
     <p>This website offers a custom Minecraft modpack ("Open Cola Modpack" or "Modpack") and a Minecraft Server ("Server"). These Terms of Service ("Terms") are an agreement between you ("User," "You," or "Your") and [Your Company Name] ("Company", "We", "Us", or "Our").</p>
-    <p>By using our Website, Open Cola Modpack, or Server, you agree to these Terms. Please read them carefully.</p>
-    <h2>1. Intellectual Property</h2>
+    <p>By using our Website, Open Cola Modpack, or Server, you agree to these Terms. Please read them carefully.</p><br><br>
+    <h2>1. Intellectual Property</h2><br>
     <ul>
         <li><strong>Open Cola Modpack:</strong> The Open Cola Modpack is the intellectual property of the Company and its licensors (if any). You are granted a limited, non-exclusive, non-transferable license to download, install, and use the Open Cola Modpack solely for personal, non-commercial purposes.</li>
         <li><strong>Server:</strong> The content and configuration of the Server are the intellectual property of the Company. You may only access and use the Server as permitted by these Terms.</li>
-        <li><strong>Minecraft:</strong> Minecraft itself is the intellectual property of Mojang AB. You must possess a valid Minecraft license to use the Open Cola Modpack or Server.</li>
+        <li><strong>Minecraft:</strong> Minecraft itself is the intellectual property of Mojang AB. You must possess a valid Minecraft license to use the Open Cola Modpack or Server.</li><br><br>
     </ul>
-    <h2>2. Prohibited Conduct</h2>
+    <h2>2. Prohibited Conduct</h2><br>
     <p>You may not:</p>
     <ul>
         <li>Distribute, sell, sublicense, or commercially exploit the Open Cola Modpack or Server.</li>
@@ -74,34 +75,34 @@
         <li>Interfere with the operation of the Website, Open Cola Modpack, or Server.</li>
         <li>Attempt to gain unauthorized access to the Website, Open Cola Modpack, Server, or related systems.</li>
         <li>Engage in griefing, cheating, or any behavior that disrupts the intended gameplay experience for others on the Server.</li>
-        <li>Violate any specific Server rules as outlined on the Website or communicated within the Server.</li>
+        <li>Violate any specific Server rules as outlined on the Website or communicated within the Server.</li><br><br>
     </ul>
-    <h2>3. Account Creation</h2>
+    <h2>3. Account Creation</h2><br>
     <p>You may be required to create an account to access certain features of the Website, Open Cola Modpack, or Server.</p>
     <ul>
         <li>You are responsible for the security of your account credentials.</li>
-        <li>We may suspend or terminate your account if you violate these Terms.</li>
+        <li>We may suspend or terminate your account if you violate these Terms.</li><br><br>
     </ul>
-    <h2>4. User-Generated Content</h2>
+    <h2>4. User-Generated Content</h2><br>
     <p>You are responsible for any content you submit to the Website, Open Cola Modpack, or Server ("User Content").</p>
     <ul>
         <li>You grant us a non-exclusive, royalty-free, worldwide license to use your User Content in connection with the Website, Open Cola Modpack, and Server.</li>
-        <li>You may not submit User Content that is illegal, harmful, infringing, or otherwise objectionable.</li>
+        <li>You may not submit User Content that is illegal, harmful, infringing, or otherwise objectionable.</li><br><br>
     </ul>
-    <h2>5. Disclaimer of Warranties</h2>
-    <p>THE WEBSITE, OPEN COLA MODPACK, AND SERVER ARE PROVIDED "AS IS" WITH NO WARRANTIES OF ANY KIND. WE DISCLAIM ALL WARRANTIES, EXPRESS OR IMPLIED, INCLUDING WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT.</p>
-    <h2>6. Limitation of Liability</h2>
-    <p>IN NO EVENT SHALL WE BE LIABLE FOR ANY DAMAGES, INCLUDING DIRECT, INDIRECT, INCIDENTAL, SPECIAL, OR CONSEQUENTIAL DAMAGES, ARISING FROM YOUR USE OF THE WEBSITE, OPEN COLA MODPACK, OR SERVER.</p>
-    <h2>7. Indemnification</h2>
-    <p>You will indemnify and hold us harmless from any claims, losses, or damages arising from your breach of these Terms or your use of the Website, Open Cola Modpack, or Server.</p>
-    <h2>8. Changes to Terms</h2>
-    <p>We may update these Terms from time to time. We will notify you of any material changes. Your continued use of the Website, Open Cola Modpack, or Server constitutes your acceptance of the amended Terms.</p>
-    <h2>9. Governing Law</h2>
-    <p>These Terms will be governed by the laws of [Your State].</p>
-    <h2>10. Dispute Resolution</h2>
-    <p>Any disputes arising from these Terms will be resolved through binding arbitration in Texas, USA.</p>
-    <h2>11. Contact Information</h2>
-    <p>You may contact us at contact@opencolamod.com.</p>
+    <h2>5. Disclaimer of Warranties</h2><br>
+    <p>THE WEBSITE, OPEN COLA MODPACK, AND SERVER ARE PROVIDED "AS IS" WITH NO WARRANTIES OF ANY KIND. WE DISCLAIM ALL WARRANTIES, EXPRESS OR IMPLIED, INCLUDING WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT.</p><br><br>
+    <h2>6. Limitation of Liability</h2><br>
+    <p>IN NO EVENT SHALL WE BE LIABLE FOR ANY DAMAGES, INCLUDING DIRECT, INDIRECT, INCIDENTAL, SPECIAL, OR CONSEQUENTIAL DAMAGES, ARISING FROM YOUR USE OF THE WEBSITE, OPEN COLA MODPACK, OR SERVER.</p><br><br>
+    <h2>7. Indemnification</h2><br>
+    <p>You will indemnify and hold us harmless from any claims, losses, or damages arising from your breach of these Terms or your use of the Website, Open Cola Modpack, or Server.</p><br><br>
+    <h2>8. Changes to Terms</h2><br>
+    <p>We may update these Terms from time to time. We will notify you of any material changes. Your continued use of the Website, Open Cola Modpack, or Server constitutes your acceptance of the amended Terms.</p><br><br>
+    <h2>9. Governing Law</h2><br>
+    <p>These Terms will be governed by the laws of [Your State].</p><br><br>
+    <h2>10. Dispute Resolution</h2><br>
+    <p>Any disputes arising from these Terms will be resolved through binding arbitration in Texas, USA.</p><br><br>
+    <h2>11. Contact Information</h2><br>
+    <p>You may contact us at contact@opencolamod.com.</p><br><br><br>
 </body>
 </div>
 
