--- a/tos.html
+++ b/tos.html
@@ -56,7 +56,8 @@
 </head>
 <body>
     <br>
-    <h1>Welcome to opencolamod.com ("Website")</h1><br><br>
+  <h2> Terms of Service </h2><br><br>
+    <h1>Welcome to opencolamod.com ("Website")</h1><br>
     <p>This website offers a custom Minecraft modpack ("Open Cola Modpack" or "Modpack") and a Minecraft Server ("Server"). These Terms of Service ("Terms") are an agreement between you ("User," "You," or "Your") and [Your Company Name] ("Company", "We", "Us", or "Our").</p>
     <p>By using our Website, Open Cola Modpack, or Server, you agree to these Terms. Please read them carefully.</p><br><br>
     <h2>1. Intellectual Property</h2><br>
