--- a/tos.html
+++ b/tos.html
@@ -99,7 +99,7 @@
     <h2>8. Changes to Terms</h2><br>
     <p>We may update these Terms from time to time. We will notify you of any material changes. Your continued use of the Website, Open Cola Modpack, or Server constitutes your acceptance of the amended Terms.</p><br><br><br>
     <h2>9. Governing Law</h2><br>
-    <p>These Terms will be governed by the laws of [Your State].</p><br><br><br>
+    <p>These Terms will be governed by the laws of the United States.</p><br><br><br>
     <h2>10. Dispute Resolution</h2><br>
     <p>Any disputes arising from these Terms will be resolved through binding arbitration in Texas, USA.</p><br><br><br>
     <h2>11. Contact Information</h2><br>
