--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="middle-content">
     <p>Explore, Build, and Thrive in Our Custom Minecraft World</p>
   </div>
-
+  <div class="middle-content">
     <section id="features">
         <h2>Our Features</h2>
         <ul>
@@ -60,7 +60,7 @@
             <li>Regular Updates: Stay engaged with frequent updates that introduce new content, improvements, and fixes.</li>
         </ul>
     </section>
-
+  </div>
   <!-- New section for additional links -->
   <div class="bottom-links">
     <a href="about.html">About OpenCola</a> | 
