--- a/tos.html
+++ b/tos.html
@@ -48,7 +48,7 @@
   </div>
   
     <br>
-  <h1> Terms of Service </h1><br>
+  <h1> Terms of Service </h1>
 <div class="middlle-content" style="width: 50%;">
 <head>
     <meta charset="UTF-8">
