--- a/contact.html
+++ b/contact.html
@@ -48,22 +48,47 @@
   </div>
   
 
-<div class="container">
-  <form action="action_page.php">
+<link href="contact-form.css" rel="stylesheet">
 
-    <label for="fname">Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+<div class="fcf-body">
 
-    <label for="lname">Email</label>
-    <input type="text" id="email" name="email" placeholder="Your email address">
-    </select>
+    <div id="fcf-form">
+    <h3 class="fcf-h3">Contact us</h3>
 
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="What do you want to tell us?" style="height:200px"></textarea>
+    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+        
+        <div class="fcf-form-group">
+            <label for="Name" class="fcf-label">Your name</label>
+            <div class="fcf-input-group">
+                <input type="text" id="Name" name="Name" class="fcf-form-control" required>
+            </div>
+        </div>
 
-    <input type="submit" value="Submit">
+        <div class="fcf-form-group">
+            <label for="Email" class="fcf-label">Your email address</label>
+            <div class="fcf-input-group">
+                <input type="email" id="Email" name="Email" class="fcf-form-control" required>
+            </div>
+        </div>
 
-  </form>
+        <div class="fcf-form-group">
+            <label for="Message" class="fcf-label">Your message</label>
+            <div class="fcf-input-group">
+                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
+            </div>
+        </div>
+
+        <div class="fcf-form-group">
+            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send Message</button>
+        </div>
+
+        <div class="fcf-credit" id="fcf-credit">
+        Simple HTML email form provided by <a href="https://www.majesticform.com" target="_blank">MajesticForm</a>
+        </div>
+
+    </form>
+    </div>
+
 </div>
 
 
