--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <a href="faq.html">FAQ</a> | 
     <a href="help.html">Help</a> | 
     <a href="tos.html">Terms of Service</a> | 
-    <a href="contact.html">Contact Us</a>
+    <a href="href="mailto:contact@opencolamod.com">Contact Us</a>
   </div>
   
   <div class="footer">
