--- a/server.html
+++ b/server.html
@@ -69,7 +69,7 @@
     <a href="#">FAQ</a> | 
     <a href="#">Help</a> | 
     <a href="#">Terms of Service</a> | 
-    <a href="contact.html">Contact Us</a>
+    <a href="mailto:contact@opencolamod.com">Contact Us</a>
   </div>
   
   <div class="footer">
