--- a/tos.html
+++ b/tos.html
@@ -103,7 +103,7 @@
     <h2>9. Governing Law</h2>
     <p>These Terms will be governed by the laws of the United States.</p><br>
     <h2>10. Dispute Resolution</h2>
-    <p>Any disputes arising from these Terms will be resolved through binding arbitration in Texas, USA.</p><br>
+    <p>Any disputes arising from these Terms will be resolved through binding arbitration in Texas.</p><br>
     <h2>11. Contact Information</h2>
     <p>You may contact us at contact@opencolamod.com.</p><br>
 </body>
