--- a/tos.html
+++ b/tos.html
@@ -49,7 +49,7 @@
   
     <br>
   <h1> Terms of Service </h1>
-<div class="middlle-content" style="width: 50%;">
+<div class="middle-content" style="text-align: left; width: 50%;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
