--- a/tos.html
+++ b/tos.html
@@ -57,7 +57,7 @@
 </head>
 
   <body>
-    <div class="middle-content">
+    <div class="middle-content" style="text-align: center; width: 50%;">
     <h2>Welcome to opencolamod.com ("Website")</h2>
     <p>This website offers a custom Minecraft modpack ("Open Cola Modpack" or "Modpack") and a Minecraft Server ("Server"). These Terms of Service ("Terms") are an agreement between you ("User," "You," or "Your") and [Your Company Name] ("Company", "We", "Us", or "Our").</p>
     <p>By using our Website, Open Cola Modpack, or Server, you agree to these Terms. Please read them carefully.</p>
@@ -107,7 +107,7 @@
     <p>You may contact us at contact@opencolamod.com.</p>
 </body>
 </div>
-
+</div>
 
   <!-- New section for additional links -->
   <div class="bottom-links">
