--- a/tos.html
+++ b/tos.html
@@ -111,11 +111,11 @@
 
   <!-- New section for additional links -->
   <div class="bottom-links">
-    <a href="#">About OpenCola</a> | 
-    <a href="#">FAQ</a> | 
-    <a href="#">Help</a> | 
-    <a href="#">Terms of Service</a> | 
-    <a href="#">Contact Us</a>
+    <a href="about.html">About OpenCola</a> | 
+    <a href="faq.html">FAQ</a> | 
+    <a href="help.html">Help</a> | 
+    <a href="tos.html">Terms of Service</a> | 
+    <a href="mailto:contact@opencolamod.com">Contact Us</a>
   </div>
   
   <div class="footer">
