--- a/modpack.html
+++ b/modpack.html
@@ -47,7 +47,7 @@
     <a href="server.html">Server</a>
   </div>
 
- <div class="middle-content">
+ <div class="middle-content" style="text-align: center; width: 50%; margin-left: auto; margin-right: auto; padding: 40px;">
 <!------------------------------------------------------------------------------------------------------------------------------------------>
 
    <h2>OpenCola Mod list</h2>
