--- a/server.html
+++ b/server.html
@@ -47,13 +47,13 @@
     <a href="server.html"><strong>Server</strong></a>
   </div>
   
- <div class="middle-content">
+ <div class="middle-content" style="text-align: center; width: 50%; margin-left: auto; margin-right: auto; padding: 40px;">
     <div class="card">
     <h2>ip: opencolamod.com</h2>
   </div>
 </div>
   
-  <div class="middle-content">
+  <div class="middle-content" style="text-align: center; width: 50%; margin-left: auto; margin-right: auto; padding: 40px;">
     <div class="card">
     <h2>Server Status</h2>
   </div>
