--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li>Expansive Mod Pack: Discover over 100+ mods that add new dimensions, biomes, mobs, and blocks to your world.</li>
             <li>Community-Driven: Join a vibrant community that shapes the mod pack's future. Share your ideas, creations, and feedback.</li>
             <li>Seamless Integration: Easy installation and compatibility with Minecraft servers. Start playing with friends in minutes.</li>
-            <li>Regular Updates: Stay engaged with frequent updates that introduce new content, improvements, and fixes.</li><br>
+            <li>Regular Updates: Stay engaged with frequent updates that introduce new content, improvements, and fixes.</li>
             <li></li>
         </ul>
     </section>
