--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <a href="server.html">Server</a>
   </div>
   <!-- New middle content section -->
-  <div class="middle-content">
+  <div class="middle-content" style="text-align: center; width: 50%; margin-left: auto; margin-right: auto; padding: 40px;">
     <p>Explore, Build, and Thrive in Our Custom Minecraft World</p>
   </div>
-  <div class="middle-content">
+  <div class="middle-content" style="text-align: center; width: 50%; margin-left: auto; margin-right: auto; padding: 40px;">
     <section id="features">
         <h2>Our Features</h2>
         <ul>
