--- a/faq.html
+++ b/faq.html
@@ -68,7 +68,7 @@
 </div>
 
 <!-- Mod Pack Installation -->
-<details open>
+<details>
   <summary>
     How can I install the Open Cola Mod Pack?
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xlink:href="#expand-more" /></svg>
