--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 <div class="header">
   <img src="opencola-logo.png" alt="OpenCola logo" width="100" height="100" />
-  <h1>Coming March 2024</h1>
+  <h1>Coming Summer 2024</h1>
   </div>
   
   <div class="nav">
